Fixed bug with prices conditional not showing on load

--- a/includes/css/edd-admin.css
+++ b/includes/css/edd-admin.css
@@ -38,5 +38,3 @@ textarea#edd_product_notes { width: 100%; height: 4em; margin: 0; }
 #downloadinformation #postcustomstuff table .submit input { width: auto; }
 .edd_upload_file { position: absolute; top: 9px; right: 9px; padding: 3px 8px 2px; display: block; background: #fff; }
 .edd_repeatable_upload_wrapper td { position: relative; }
-
-.edd_add_blank, #downloadinformation .pricing { display: none; }
